fix details marker on firefox

--- a/docs/tutorials/getting-started.less
+++ b/docs/tutorials/getting-started.less
@@ -104,6 +104,7 @@ li#helm3 {
 .QS-aside2 .QS-codeblockInstall {
   margin-top: 1em;
 }
+details summary { list-style-type: none; }
 summary::-webkit-details-marker {display: none; }
 details summary::before { content:"►"; font-size: .5em;}
 details[open] summary::before { content:"▼" }
@@ -142,6 +143,7 @@ summary#helmVersions {
   width: 30px;
   height: 30px;
   margin: 0 0 -4px 4px;
+  margin-bottom: 2px;
 }
 .QS-aside3 {
   grid-area: sidebar3;
